@@ -1,17 +1,13 @@
 # Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
-#
-# See configure script for important hack pertaining to Travis CI
 
 language: c
-
 sudo: required
-
 dist: trusty
 
 before_install:
   - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
   # optionally add our launchpad repo, but not needed here
-  # - sudo add-apt-repository -y ppa:edd/misc
+  # - sudo add-apt-repository -y ppa:edd/r-3.5
   # load gcc-6 and make it default
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - ./run.sh bootstrap
